--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 		}
 	],
 	"require": {
-		"php": "7.0.*",
+		"php": ">=5.6.0",
 		"nette/application": "^2.4",
 		"nette/bootstrap": "^2.4.2",
 		"nette/caching": "^2.5",
@@ -31,7 +31,8 @@
 		"nette/utils": "^2.4",
 		"latte/latte": "^2.4",
 		"tracy/tracy": "dev-master",
-		"dg/adminer-custom": "^1.6"
+		"dg/adminer-custom": "^1.6",
+                 "php": "7.0.*"
 	},
 	"require-dev": {
 		"nette/tester": "^1.6"
